# iced-lowres-test

./: Cargo.toml
src/: buffer.rs  engine.rs  image.rs  layer.rs  lib.rs  lowres.rs  main.rs  quad.rs  text.rs  triangle.rs
src/quad/: gradient.rs  solid.rs
src/shader/: quad.wgsl
src/shader/quad/: gradient.wgsl  solid.wgsl
src/triangle/: msaa.rs
